--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "engines": {
     "node": "12.x",
-    "npm": "6.x"},
+    "npm": "6.x"
+  },
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
