--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.3",
+    "serve": "^11.3.2",
     "styled-components": "^5.2.0",
     "typescript": "~3.7.2"
   },
